Improved README Task descriptions